--- a/frontend/src/components/product.css
+++ b/frontend/src/components/product.css
@@ -5,7 +5,7 @@
 .product {
     display: grid;
     grid-template-columns: 100%;
-    grid-template-rows: 4fr 1fr;
+    grid-template-rows: 5fr 1fr;
     box-shadow: 0 0.25rem 0.5rem 0 rgba(0, 0, 0, 0.2);
     margin: 0.5rem;
     text-align: center;
@@ -14,13 +14,13 @@
     border-radius: 0.5rem;
     padding: 0.5rem;
     width: 14.4rem;
-    height: 18rem;
+    height: 21.6rem;
 }
 
 .product_container{
     display: grid;
     grid-template-columns: 100%;
-    grid-template-rows: 2fr 1fr;
+    grid-template-rows: 5fr 3fr;
 }
 
 .product-image-container{
@@ -32,6 +32,11 @@
 .product:hover {
     box-shadow: 0 0.5rem 1rem 0 rgba(0, 0, 0, 0.2);
     cursor: pointer;
+}
+
+.product-name-price{
+    display: grid;
+    grid-template-rows: 2fr 1fr;
 }
 
 .product-name{
@@ -72,6 +77,7 @@
     padding-top: 0.3rem;
     display: flex;
     flex-direction: row;
+    align-items: center;
     justify-content: space-between;
     border-top:1px solid #a3a1e9;
 }
