--- a/frontend/src/components/Contacts.css
+++ b/frontend/src/components/Contacts.css
@@ -3,11 +3,13 @@
 }
 
 .contact-container {
-      height: 2.0vw;
+      height: 3.5rem;
       background-color:inherit;
       width: 100%;
       display: flex;
       justify-content: space-between;
+      padding-top: 0.3rem;
+      align-items: center;
 }
 
 .call-email{
