--- a/frontend/src/containers/Layout.css
+++ b/frontend/src/containers/Layout.css
@@ -3,62 +3,31 @@
 }
 
 .layout-container{
-    display: grid;
-    grid-template-areas:
-    "header"
-    "main"
-    "footer";
-    grid-template-columns: 100%;
-    grid-template-rows:auto 1fr auto;
-    height: 100%;
+    display: flex;
+    flex-direction: column;
 }
 
-.header-contacts-container{
-    grid-area: header;
-    display: grid;
-    grid-template-areas:
-    "contacts"
-    "head";
-    grid-template-columns: 100%;
-    grid-template-rows:3rem 5rem;
-    background-color: #deccf0;
-    position: sticky;
-}
 
 .contacts-container{
     display: flex;
     align-items: center;
-    grid-area: contacts;
-    background-color: inherit;
+    background-color: #deccf0;
     color: #312f8b;
     padding: 0;
 }
 
-.header-container {
-    grid-area: head;     
-    background-color: inherit;
+.header-container {  
+    background-color: #deccf0;
     color: #312f8b;
- }
-
- .sticky1 {
-    position: fixed;
+    position: -webkit-sticky;
+    position: sticky;
     top: 0;
-    left: 0;
-    right: 0;
-    z-index: auto;
-  }
-
-  /* Add some top padding to the page content to prevent sudden quick movement (as the navigation bar gets a new position at the top of the page (position:fixed and top:0) */
-.sticky + .content {
-  padding-top: 60px;
-}
-
- .main-container {
-     grid-area: main;
+    height: 5rem;
+    z-index: 101;
  }
 
  .mobile-menu-container{
-    display: block;
+    display: none;
  }
 
 .footer-container {
@@ -71,29 +40,33 @@
     align-items: center;
 }
 
+.mobile-menu-search{
+    position: -webkit-sticky;
+    position: sticky;
+    top: 5rem;
+    z-index: 100;
+}
+
+.mobile-search{
+    display: none;
+}
+
 @media only screen and (max-width: 1024px) {
     
     .layout-container{
-        display: grid;
-        grid-template-areas:
-        "header"
-        "main"
-        "footer";
-        grid-template-columns: 100%;
-        grid-template-rows: 5rem 1fr auto;
-        height: 100%;
+        display: flex;
+        flex-direction: column;
     }
-
-    .header-contacts-container{
-        grid-area: header;
-        display: grid;
-        grid-template-areas:
-        "head";
-        grid-template-columns: 100%;
-        grid-template-rows:5rem;
-    }    
 
     .contacts-container{
         display: none;
     }
+
+    .mobile-search{
+        display: block;        
+    }
+
+    .mobile-menu-container{
+        display: block;
+     }
 }
