--- a/frontend/src/screens/AdminListsScreen.css
+++ b/frontend/src/screens/AdminListsScreen.css
@@ -124,3 +124,85 @@
     margin-right: 2rem;
 }
 
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    padding-top: 1rem; /* Location of the box */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+    z-index: 103;
+}
+
+  /* Modal Content */
+.modal-content {
+    background-color: #fefefe;
+    margin: auto;
+    padding: 1.25rem;
+    border: 1px solid #888;
+    width: 80%;
+    max-height: 100%;
+}
+
+.modal-content ul{
+    margin: 1rem;
+}
+
+.modal-content li{
+    display: flex;
+    align-items: center;
+}
+
+.modal-content li>label{
+    width: 10rem;
+    margin: 0rem 0.5rem 0rem 0.5rem;
+}
+
+.modal-content input,select, textarea{
+    width: 100%;
+    padding: 0.3rem;
+    margin: 0.3rem;
+    border-radius: 0.5rem;
+    color: #312f8b;
+    font-size: 1rem;
+}
+
+.modal-content p{
+    padding: 1rem;
+}
+
+.modalHeader{
+    background-color: #deccf0;
+    text-align: center;
+    height: 3rem;
+    justify-content: center;
+    align-items: center;
+}
+
+.okCancelButton:disabled{
+    color:  #9291df;
+}
+
+.okCancelButton{
+    padding-left: 1rem;
+    padding-right: 1rem;
+    margin-right: 1rem;
+    margin-top: 1rem;
+    width: auto;
+}
+
+.okCancelButton-wrapper{
+    display: flex;
+    justify-content: space-between;
+}
+
+.continuebtn:disabled{    
+    color: #9291df;
+}
+
+
