--- a/frontend/src/screens/MainScreen.css
+++ b/frontend/src/screens/MainScreen.css
@@ -32,6 +32,7 @@
     margin: 1rem;    
     width: 80%;
     align-self: center;
+    z-index: 1;
 }
 
 .collection-carousel>h2{
@@ -82,7 +83,7 @@ ul.breadcrumb {
 
 .select-model{
     margin-left: 1rem;
-    font-size: 1rem;
+    font-size: 0.9rem;
     font-family: sans-serif;
     font-weight: 500;
     color: #312f8b;
@@ -121,7 +122,7 @@ ul.breadcrumb {
 .form-container{
     display: flex;
     flex-direction: column;
-    width: 90%;
+    width: 100%;
     padding: 2rem;
     border: 0.1rem #c0c0c0 solid;
     border-radius: 0.5rem;
