--- a/frontend/src/screens/ProductsByCategoryScreen.css
+++ b/frontend/src/screens/ProductsByCategoryScreen.css
@@ -69,6 +69,21 @@
     color: #312f8b;
 }
 
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    padding-top: 1rem; /* Location of the box */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+    z-index: 103;
+}
+
 .filter-modal-content{
     background-color: #fefefe;
     margin: auto;
