--- a/frontend/src/screens/ShippingScreen.css
+++ b/frontend/src/screens/ShippingScreen.css
@@ -159,6 +159,14 @@
     width: 30%;
 }
 
+#shipping-postalCode{
+    width: 30%;
+}
+
+.flex-start{
+    width: 50%;
+}
+
 .comments-textarea{
     width: 100%;
     height: 15vh;    
@@ -211,6 +219,10 @@
     .order-qty-total-price{
         width: 100%;
         justify-content: flex-end;
+    }
+
+    .flex-start{
+        width: 100%;
     }
 
 }
