--- a/frontend/src/screens/AdminOrdersScreen.css
+++ b/frontend/src/screens/AdminOrdersScreen.css
@@ -8,10 +8,6 @@
     margin: 1rem;
 }
 
-.filter-container>label{
-    margin: 1rem;
-}
-
-.filter_orders{
-    width: auto;
+.order-list{
+    overflow-x:auto;
 }
