--- a/frontend/src/screens/PaymentScreen.css
+++ b/frontend/src/screens/PaymentScreen.css
@@ -98,6 +98,10 @@
     margin: 0.5rem;
 }
 
+.attention{
+    color: red;
+}
+
 @media only screen and (max-width: 1024px) {
     .payment-form-wrapper{
         flex-direction: column;
