--- a/frontend/src/screens/SearchScreen.css
+++ b/frontend/src/screens/SearchScreen.css
@@ -8,9 +8,10 @@
     width: 100%;
     display: flex;
     flex-direction: row;
-    justify-content: right;
+    justify-content: flex-end;
     align-items: center;
     padding-right: 1rem;
+    padding-left: 1rem;
     padding-bottom: 1rem;
 }
 
