--- a/frontend/src/screens/AdminProductsScreen.css
+++ b/frontend/src/screens/AdminProductsScreen.css
@@ -65,7 +65,7 @@ tbody>tr:nth-child(odd){
 }
 
 .form-create-product>form{
-    width: 40%;
+    width: 60%;
     margin-right: 1rem;
 }
 
@@ -107,6 +107,11 @@ tbody>tr:nth-child(odd){
 
 #row>select{
     width: 64%
+}
+
+.column_flex{
+    display: flex;
+    flex-direction: column;
 }
 
 .modal {
@@ -172,5 +177,37 @@ tbody>tr:nth-child(odd){
 .format_price{
     text-align: end;
     font-weight: 700;
+}
+
+.product-img-preview{
+    height: 5rem;
+    width: 5rem;
+}
+
+.html_editor{
+    text-align: left;
+}
+
+.search_by_name{
+    display: flex;
+    justify-content: space-between;
+    margin-left: 1.7rem;
+    margin-right: 1.2rem;
+    margin-top: 1rem;
+    align-items: center;
+}
+
+.search_by_name>label{
+    width: 10rem;
+    margin-right: 0.5rem;
+}
+
+.search_by_name> input{
+    width: 80%;
+    padding: 0.3rem;
+    margin: 0.3rem;
+    border-radius: 0.5rem;
+    color: #312f8b;
+    font-size: 1rem;
 }
 
