--- a/frontend/src/screens/SearchScreen.css
+++ b/frontend/src/screens/SearchScreen.css
@@ -3,7 +3,7 @@
     margin: 1rem;
 }
 
-.filter_collection{
+.order_items{
     color: #312f8b;
     width: 100%;
     display: flex;
@@ -23,7 +23,7 @@
     margin-right: 0.3rem;
     border-radius: .5rem;
     color: #312f8b;
-    font-size: 1rem;
+    font-size: 0.9rem;
 }
 
 .search-filters{
@@ -50,7 +50,13 @@
     margin-right: 0.5rem;
 }
 
-.filter-separator{
-    
-    
+@media only screen and (max-width: 1024px) {
+    .order_items{
+        flex-direction: column;
+        align-items: flex-end;    
+    }
+
+    .order_items label{
+        margin-right: 0.5rem;
+    }
 }
