--- a/frontend/src/screens/ProductsByCategoryScreen.css
+++ b/frontend/src/screens/ProductsByCategoryScreen.css
@@ -91,6 +91,7 @@
     border: 1px solid #888;
     width: 100%;
     height: auto;
+    min-height: 14rem;
 }
 
 .filter_items li{
@@ -105,6 +106,19 @@
     justify-content: center;
     cursor: pointer;
     margin: 1rem;
+}
+
+.exitButton{
+    background-color: white;
+    border: none;
+    font-size: 1rem;
+    padding: 0.5rem;
+    cursor: pointer;
+}
+
+.filterHeader{
+    display: flex;
+    justify-content: space-between;
 }
 
 @media only screen and (max-width: 1024px) {
